Transition quarkus ssf extension from easyssf to quarkiverse
Signed-off-by: Thomas Darimont <thomas.darimont@googlemail.com>